force-app/main/default/objects/Organization__c/Organization__c.object-meta.xml
<CustomObject>
    <description>FHIR Organization. Practice or billing entity with Type 2 NPI. Organization-wide default is Public Read Only.</description>
    <label>Organization</label>
    <nameField>
        <label>Organization Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Organizations</pluralLabel>
    <sharingModel>Read</sharingModel>
</CustomObject>