force-app/main/default/objects/Organization__c/fields/EIN__c.field-meta.xml
<CustomField>
    <fullName>EIN__c</fullName>
    <label>EIN</label>
    <length>20</length>
    <type>Text</type>
</CustomField>