force-app/main/default/objects/Organization__c/fields/Is_Default_Billing__c.field-meta.xml
<CustomField>
    <fullName>Is_Default_Billing__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Default Billing</label>
    <type>Checkbox</type>
</CustomField>