force-app/main/default/objects/Organization__c/listViews/Active.listView-meta.xml
<ListView>
    <fullName>Active</fullName>
    <columns>NAME</columns>
    <columns>NPI__c</columns>
    <columns>EIN__c</columns>
    <columns>Is_Default_Billing__c</columns>
    <columns>Active__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Active__c</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <label>Active</label>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>